# Rate-My-PG

./: .breakpoints  README.md  app.py  pyproject.toml  resources.html
data/: review.json
templates/: Login.html  contact us.html  contactus.css  contactus.html  contactus1.html  footer.html  home.html  index.html  nav.html  pglistings.html  resources.html  results.html  review.html  signup.html  style.css
